--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-streamlit>=1.30.0
-pydeck>=0.9.0
-pandas>=2.0.0
-numpy>=1.24.0
-networkx>=3.0
-requests>=2.31.0
-python-dotenv>=1.0.0
+# EarthDial v3 — GTC 2026 Production Lock
+# Pinned Feb 16, 2026. DO NOT UPGRADE before keynote.
+streamlit==1.54.0
+pydeck==0.9.1
+pandas==2.3.3
+numpy==2.4.2
+networkx==3.6.1
+requests==2.32.5
+python-dotenv==1.2.1
